--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,7 +3,15 @@ AM_LDFLAGS = -no-undefined
 
 lib_LTLIBRARIES=libspiceglue.la
 libspiceglue_la_LIBADD=$(GLIB_LIBS) $(SPICEGLIB_LIBS)
-libspiceglue_la_SOURCES=glue-printing.c glue-spice-widget.c glue-service.c glue-spicy.c glue-clipboard.c
+libspiceglue_la_SOURCES=glue-printing.c glue-spice-widget.c glue-service.c glue-spicy.c
+
+if WITH_CLIPBOARD_WIN32
+libspiceglue_la_SOURCES+=glue-clipboard-win32.c
+endif
+
+if WITH_CLIPBOARD_MACOS
+libspiceglue_la_SOURCES+=glue-clipboard-macos.c
+endif
 
 if WITH_USBREDIR
 libspiceglue_la_SOURCES+= usb-device-widget.c usb-device-widget.h usb-glue.c usb-glue.h
