--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
-AM_CPPFLAGS = -I$(top_srcdir)/include -DG_LOG_DOMAIN=\"SpiceGlue\" $(GLIB_CFLAGS) $(SPICEGLIB_CFLAGS) $(FLEXVDI_SPICE_CLIENT_CFLAGS)
+AM_CPPFLAGS = -DG_LOG_DOMAIN=\"SpiceGlue\" $(GLIB_CFLAGS) $(SPICEGLIB_CFLAGS) $(FLEXVDI_SPICE_CLIENT_CFLAGS)
 AM_LDFLAGS = -no-undefined
 
 lib_LTLIBRARIES=libspiceglue.la
